fix: newletter button text on mobile safari

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -506,6 +506,7 @@ article.post-content {
             -moz-appearance: none;
             appearance: none;
             background-color: lightgray;
+            color:black;
 
             @include media-query-laptop() {
                     grid-column-start: 3;
